# WPS-LaTex2Equation-tool

./: .gitignore  CHANGELOG.md  LICENSE  README.md  convert_latex_docx.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: GUI需求调研模板.md
docs/xiaohongshu/: post_script.md  xianyu_sku.md
examples/: demo_after.docx  demo_before.docx
gui/: __init__.py  __main__.py  app.py  dnd_win.py  settings.py
legacy/: LaTeXToEquation.bas  README.md  使用说明.txt
scripts/: WPS-LaTeX2Equation-debug.spec  WPS-LaTeX2Equation.spec  build_examples.py  build_exe.md  build_gui_exe.bat  run_gui.bat
tests/: test_core.py
