[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "patent-math-tool"
version = "1.1.2"
description = "AI $LaTeX$ in docx → native OMML for WPS and Word (no COM, no MathType)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "latex",
    "docx",
    "equation",
    "wps",
    "word",
    "omml",
    "mathml",
    "chatgpt",
    "formula",
    "ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "lxml>=5.0.0",
    "latex2mathml>=3.77.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
gui = [
    "customtkinter>=5.2.0",
    "windnd>=1.0.7; sys_platform == 'win32'",
]

[project.scripts]
patent-math = "convert_latex_docx:main"
docx-latex-math = "convert_latex_docx:main"
wps-latex2equation-gui = "gui.app:run"

[project.urls]
Homepage = "https://github.com/cgflag/WPS-LaTex2Equation-tool"
Repository = "https://github.com/cgflag/WPS-LaTex2Equation-tool"
Issues = "https://github.com/cgflag/WPS-LaTex2Equation-tool/issues"

[tool.setuptools]
py-modules = ["convert_latex_docx"]

[tool.setuptools.packages.find]
where = ["."]
include = ["gui*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
